[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
]
